recycler view fet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AA2_Ahorcado_RogerAlamanac</string>
+    <string name="wordLevel1">ENTI</string>
 </resources>
