UI Acabada + light / dark mode

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,5 +20,6 @@
     <string name="touchToContinue">TAP TO CONTINUE</string>
     <string name="letterCountText">"Letters: "</string>
     <string name="wordLevelSelector">"Word: "</string>
+    <string name="lightDarkTheme">Dark / Light Mode</string>
 
 </resources>
