--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="touchToContinue">TOCA PARA CONTINUAR</string>
     <string name="letterCountText">Letras:</string>
     <string name="wordLevelSelector">Palabra:</string>
+    <string name="lightDarkTheme">Modo Claro / Oscuro</string>
 
 
 </resources>
